--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <depend>audio_common_msgs</depend>
   <depend>rosbag2_transport</depend>
   
   <export>
