--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,3 +16,4 @@ jobs:
     uses: ros-misc-utilities/ros_build_scripts/.github/workflows/ros2_recent_ci.yml@master
     with:
       repo: ${{ github.event.repository.name }}
+      vcs_url: https://raw.githubusercontent.com/${{ github.repository }}/master/${{ github.event.repository.name }}.repos
