--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>aviary</name>
   <version>1.0.0</version>
-  <description>ROS2 composable recorder</description>
+  <description>aviary source code</description>
   <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
   <license>Apache-2</license>
 
