--- a/package.xml
+++ b/package.xml
@@ -8,13 +8,16 @@
   <license>Apache-2</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
-  <depend>audio_common_msgs</depend>
-  <depend>rosbag2_transport</depend>
+  <depend>ros_environment</depend>
+  <depend>rclcpp_components</depend>
+  <depend>rclcpp</depend>
+  <depend>rosbag2_cpp</depend>
   
   <export>
     <build_type>ament_cmake</build_type>
