--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <test_depend>ament_lint_common</test_depend>
 
   <!-- required because of broken stuff in audio_common -->
+  <build_depend>gstreamer-1.0</build_depend>
   <build_depend>libgstreamer1.0-dev</build_depend>
   <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
 
